--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   },
   "dependencies": {
     "@langchain/openai": "^0.0.14",
-    "langchain": "^0.1.21"
+    "langchain": "^0.1.21",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   }
 }
