--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
   },
   "dependencies": {
     "@langchain/openai": "^0.0.14",
+    "add": "^2.0.6",
     "langchain": "^0.1.21",
+    "pdf-parse": "^1.1.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "yarn": "^1.22.22"
   }
 }
