--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@langchain/openai": "^0.0.14",
     "add": "^2.0.6",
+    "cheerio": "^1.0.0-rc.12",
     "langchain": "^0.1.21",
     "pdf-parse": "^1.1.1",
     "ts-node": "^10.9.2",
